manifests/cloudflare-tunnel/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ddns-updater
  namespace: cloudflare
spec:
  parentRefs:
  - name: tls
    namespace: cilium
    sectionName: https
  hostnames:
  - "ddns-updater.ucdialplans.com"
  rules:
  - backendRefs:
    - name: ddns-updater-web
      namespace: cloudflare
      kind: Service
      port: 8000
